<resources>
    <string name="app_name">PORGMUN</string>
    <string name="search_hint">Search rules, committees and contacts</string>
    <string name="title_activity_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_committees">Committees</string>
    <string name="nav_item_news">News</string>
    <string name="nav_item_map">Map</string>
    <string name="nav_item_events">Events</string>
    <string name="nav_item_rules">Rules of Procedure</string>
    <string name="nav_item_contact">Contact us</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_committees</item>
        <item>@string/nav_item_news</item>
        <item>@string/nav_item_rules</item>
        <item>@string/nav_item_map</item>
        <item>@string/nav_item_events</item>
        <item>@string/nav_item_contact</item>
    </string-array>
    <string name="title_home"> </string>
    <string name="title_committees">Committees</string>
    <string name="title_news">News</string>
    <string name="title_map">Map</string>
    <string name="title_factbook">Factbook</string>
    <string name="title_events">Events</string>
    <string name="title_rules">Rules</string>
    <string name="title_contact">Contact</string>
    <string name="title_activity_feed">News</string>
    <string name="home_logo">PORGMUN 2017</string>
    <string name="facebook_app_id">752597214849138</string>
    <string name="post_URL">https://docs.google.com/forms/d/1XPaQe0j86XwcxbO13uxZRawCwUexyJMHdPlPLoQaD1A/formResponse</string>
    <string name="entry_name">entry.569049980</string>
    <string name="entry_lunch">entry.1848830064</string>
    <string name="entry_vegetarian">entry.1064515687</string>
    <string name="entry_allergies">entry.1044628477</string>
    <string name="entry_special">entry.175346585</string>
    <string name="form_name">Lunch choice</string>
    <string name="description">Please write your name and pick your preferences</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">1. What\'s your name?</string>
    <string name="lunch">2. Do you want to have lunch in our cafeteria?</string>
    <string name="veg">3. Are you a vegetarian?</string>
    <string name="allergies">4. Do you have any food allergies?</string>
    <string name="special">5. Please list all your extra requirements</string>
    <string name="download1"><u>Download Research Paper</u></string>
    <string name="download2"><u></u></string>
    <string name="downloadg1"><u>Download Guide 1</u></string>
    <string name="downloadg2"><u>Download Guide 2</u></string>
    <string name="download_rp"><u>Download Sample Memorial Brief</u></string>
    <string name="download_sc_rules"><u>Download SC Rules of Procedure</u></string>
    <string name="download_hsc_rules"><u>Download HSC Rules of Procedure</u></string>
    <string name="sc_rules_odkaz">http://porgmun.cz/doc/2017/sc-rules-of-procedure.pdf</string>
    <string name="hlavni">Swinging back to democracy</string>
    <string name="hlavni_popisek">The theme of the PORGMUN 2017 Conference is Swinging back to democracy (Striving for institutional change in an ever-changing society). New, hybrid threats, devaluation of national sovereignty in favour of globalization, political radicalization and the evident disconnect of the majority from leading political elites are all clear indicators that our current era is steadily rendering our conventional political system obsolete. The need for change is apparent.</string>
    <string name="security_council">Security Council</string>
    <string name="security_popisek">Topic: Settling the South China Sea dispute
        \n\nChairs: David Němeček, Daniel Ronen</string>
    <string
        name="sc_research_odkaz">http://porgmun.cz/doc/2017/security-council-research-paper.pdf</string>
    <string name="human_rights">Human Rights Council</string>
    <string name="human_rights_popisek">Topic 1: Debating on freedom of religious expression in nations affected by terror attacks and/or threats
\n\nTopic 2: Resolving cultural and logistical obstacles to contraceptives: promoting social and economic rights of women
        \n\nChairs: Daniel Devereaux, Markéta Lišková</string>
    <string name="hrc_research_odkaz">http://porgmun.cz/doc/2017/human-rights-council-research-paper.pdf</string>
    <string name="historical_security_council">Historical Security Council</string>
    <string name="historical_security_popisek">Topic: Cuban Missile Crisis: mediating a sustainable and mutually beneficial approach to protect peace and security
    \n\nChairs: Sebastian Štros, Natálie Vyhnalová</string>
    <string name="hsc_research_odkaz">http://porgmun.cz/doc/2017/historical-security-council-research-paper.pdf</string>
    <string name="international_court">International Court of Justice</string>
    <string name="ic_popisek">Topic: to be announced
    \n\nChairs: Miroslav Crha</string>
    <string name="icj_guide_odkaz">http://porgmun.cz/doc/2017/icj-guide.pdf</string>
    <string name="icj_guide_odkaz2">http://porgmun.cz/doc/2017/icj-memorial-brief.pdf</string>
    <string name="icj_memorial_sample">http://porgmun.cz/doc/2017/icj-sample-memorial-brief.pdf</string>
    <string name="disarmament">Special Political and Decolonisation Committee</string>
    <string name="disarmament_popisek">Topic 1: Kurdistan: solving the issue of the largest nation without a sovereign territory

        \n\nTopic 2: The future of refugees: the question of assimilation versus repatriation
    \n\nChairs: Nina Pricová, Robin Zenker</string>
    <string name="dis_research_odkaz">http://porgmun.cz/doc/2017/special-political-and-decolonization-committee-research-paper.pdf</string>
    <string name="human_trafficking">Legal Committee</string>
    <string name="human_trafficking_popisek">Topic 1: Responsibility to protect: the past and the future of international efforts to prevent mass atrocities
        \n\nTopic 2: Overcoming the deadlock in defining and combatting international terrorism
    \n\nChairs: Martin Bláha, Barbora Müllerová</string>
    <string name="htc_research_odkaz">http://porgmun.cz/doc/2017/legal-committee-research-paper.pdf</string>
    <string name="economic_council">Special Conference on Energetics</string>
    <string name="economic_council_popisek">Topic 1: Carbon offsetting and other innovative methods of reducing emissions while staying competitive
\n\nTopic 2: Resource entitlement: defining the minimum environmental and financial conditions of fossil fuel exploitation by transnational corporations
    \n\nChairs: Maxmilián Sup, Šimon Olmer</string>
    <string name="ecosoc_research_odkaz">http://porgmun.cz/doc/2017/special-conference-on-energetics-research-paper.pdf</string>
    <string name="environmental_committee">African Union</string>
    <string name="environmental_committee_popisek">Topic 1: Strengthening African states by regionally shifting towards an export-based industrial economy focusing specifically on disadvantaged land-locked states
        \n\nTopic 2: Political crisis in Burundi: establishing a redistribution system for regional migrants and providing them with a social safety net
    \n\nChairs: Bruce Bybee, Lucie Čapková</string>
    <string name="ec_research_odkaz">http://porgmun.cz/doc/2017/african-union-research-paper.pdf</string>
    <string name="gender_equality">Sustainable Development Committee</string>
    <string name="gender_equality_popisek">Topic 1: Sustainable agricultural and agronomic innovation for food self-suffiency of LDCs
    \n\nTopic 2: Personal transportation as a significant contributor to climate change: the strive for more affordable and efficient alternatives
    \n\nChairs: Františka Tranová, Josef Bratršovský</string>
    <string name="gec_research_odkaz">http://porgmun.cz/doc/2017/sustainable-development-research-paper.pdf</string>
    <string name="financial_economic">Drugs and Crime Committee</string>
    <string name="financial_popisek">Topic 1: Reevaluating the war on drugs and updating international legislation on illegal substances
\n\nTopic 2: Transparent ownership one year after Panama papers
    \n\nChairs: Daniella Ofer, Marek Gerle</string>
    <string name="ecofin_research_odkaz">http://porgmun.cz/doc/2017/drugs-and-crime-research-paper.pdf</string>
    <string name="who">World Health Organization</string>
    <string name="who_popisek">Topic 1: Creating universal morality guidelines for research in the field of genetic modification of human embryos\n\nTopic 2: Assuring women\'s health by globally promoting safe abortion procedures in cases of involuntary pregnancies arising from sexual violence\n\nChairs: Veronika Holubová, Anastasia Rybalchenko</string>
    <string name="who_research_odkaz">http://porgmun.cz/doc/2017/world-health-organization-research-paper.pdf</string>
    <string name="drugs_crime">Committee on Drugs and Crime</string>
    <string name="drugs_crime_popisek">Topic 1: Reducing the power of the drug lords and gangs and eliminating the negative social phenonemons appearing with drug trafficking and drug use
\n\nTopic 2: Establishing unified counter-terrorism procedures in the aftermath of the recent terrorist attacks on UN member states
    \n\nChairs: Nina Pricová, Adam Motloch</string>
    <string name="dc_research_odkaz">http://porgmun.cz/doc/2016/Committee_on_Drugs_and_Crime_Research_Paper_1.pdf</string>
    <string name="dc_research_odkaz2">http://porgmun.cz/doc/2016/Committee_on_Drugs_and_Crime_Research_Paper_2.pdf</string>
    <string name="motions">Points and motions</string>
    <string name="parts_of_discussion">Parts of the debate</string>
    <string name="amendments">Amendments</string>
    <string name="voting">Voting procedure</string>
    <string name="PointsMotions_popisek">Points and motions are tools used to change the course of debate or to get recognized by the Chair. They cover a wide array of agenda and their knowledge is absolutely instrumental to fully participating in a debate.
        Below is a list of possible points and motions with explanations.</string>
    <string name="PoI">Point of Information</string>
    <string name="thursday"><b>Thursday 6.4.</b>\nPrague City Hall</string>
    <string name="thursday_popisek">11:00 - 13:00 Registration\n13:00 - 16:30 Opening Ceremony\n16:30 - 16:45 Supervisor Meeting \n19:00 - 21:00 Icebreakers (at Exe Iris Hotel)</string>
    <string name="friday"><b>Friday 7.4.</b>\nGymnázium Nový PORG</string>
    <string name="friday_popisek">09:00 - 17:00 Committees in session\n12:00 - 14:00 Lunch\n16:00 - 17:00 NGO presentations\n19:00 - 20:00 Prague Tour (Meeting at St. Wenceslas Statue, Václavské náměstí)</string>
    <string name="saturday"><b>Saturday 8.4.</b>\nGymnázium Nový PORG</string>
    <string name="saturday_popisek">09:00 - 16:00 Committees in session\n12:00 - 14:00 Lunch</string>
    <string name="sunday"><b>Sunday 9.4.</b>\nPrague City Hall</string>
    <string name="sunday_popisek">10:00 - 12:00 Closing Ceremony</string>
</resources>