<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.porgmun.martinajireckova.porgmun.activity.EventsFragment"
    android:background="@color/feed_bg">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <LinearLayout
       android:layout_height="fill_parent"
       android:layout_width="fill_parent"
       android:orientation="vertical">

       <!--Thursday-->
       <android.support.v7.widget.CardView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:background="#FFFFFF"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginBottom="10dp"
           >

           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
               >
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/thursday"
                   android:padding="10dp"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/textColorPrimary"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/thursday_popisek"
                   android:padding="10dp"/>

           </LinearLayout>


       </android.support.v7.widget.CardView>

       <!--Friday-->
       <android.support.v7.widget.CardView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:background="#FFFFFF"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginBottom="10dp"
           >

           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
               >
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/friday"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/textColorPrimary"
                   android:padding="10dp"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/friday_popisek"
                   android:padding="10dp"/>
              <!-- <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/hvezdicka"
                   android:padding="10dp"
                   android:textSize="10sp"/>-->

           </LinearLayout>


       </android.support.v7.widget.CardView>

       <!--Saturday-->
       <android.support.v7.widget.CardView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:background="#FFFFFF"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginBottom="10dp"
           >

           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
             >
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/saturday"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/textColorPrimary"
                   android:padding="10dp"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/saturday_popisek"
                   android:padding="10dp"/>
              <!-- <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/hvezdicka"
                   android:padding="10dp"
                   android:textSize="10sp"/>-->

           </LinearLayout>


       </android.support.v7.widget.CardView>

       <!--Sunday-->
       <android.support.v7.widget.CardView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:background="#FFFFFF"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginBottom="10dp"
           >

           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
              >
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/sunday"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/textColorPrimary"
                   android:padding="10dp"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/sunday_popisek"
                   android:padding="10dp"/>

           </LinearLayout>


       </android.support.v7.widget.CardView>


   </LinearLayout>

</ScrollView>
</RelativeLayout>