<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/feed_bg"
    tools:context="com.porgmun.martinajireckova.porgmun.activity.RulesFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/motions"
                    android:layout_weight="0.9"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right"
                    android:baselineAlignBottom="false"
                    android:id="@+id/sipka1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:clickable="false"
                    android:layout_gravity="center_vertical|right"
                    android:layout_weight="0.1"/>

            </LinearLayout>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                android:layout_width="fill_parent"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/parts_of_discussion"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right"
                android:layout_gravity="center_vertical|right"
                android:baselineAlignBottom="false"
                android:id="@+id/sipka2"
                android:layout_weight="0.1"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/amendments"
                    android:layout_weight="0.9"
                    android:layout_gravity="center_vertical"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/right"
                    android:layout_gravity="center_vertical|right"
                    android:baselineAlignBottom="false"
                    android:id="@+id/sipka3"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/voting"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.9"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right"
                    android:layout_gravity="center_vertical|right"
                    android:baselineAlignBottom="false"
                    android:id="@+id/sipka4"
                    android:layout_weight="0.1"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>






    </LinearLayout>
</ScrollView>
</RelativeLayout>